# db-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
src/db_mcp/: __main__.py  config.py  connection.py  server.py  validation.py
src/db_mcp/tools/: aggregate.py  describe.py  describe_sqlite.py  execute.py  execute_sqlite.py  list_collections.py  list_tables.py  list_tables_sqlite.py  query.py  query_sqlite.py  status.py
