[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db-mcp-server"
version = "1.1.3"
description = "Database MCP server for MySQL, PostgreSQL, and MongoDB with SSH tunneling support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ing. Luca Stucchi" },
]
keywords = ["mcp", "database", "mysql", "postgresql", "mongodb", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "mcp[cli]",
    "aiomysql",
    "asyncpg",
    "motor",
    "sshtunnel",
    "paramiko",
]

[project.urls]
Homepage = "https://github.com/stucchi/db-mcp-server"
Repository = "https://github.com/stucchi/db-mcp-server"
Issues = "https://github.com/stucchi/db-mcp-server/issues"

[project.scripts]
db-mcp-server = "db_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
